css/material-timepicker.css
/* OPTIONAL */
input[type="mat-timepicker"].MatTimepickerInput {
  font-family: sans-serif;
  color: #333;
  cursor: pointer;
  padding: 3px;
  line-height: 15px;
  font-size: 15px;
  width: 40px;
  border: 1px solid #ddd;
  border-radius: 1px;
  transition-property: border-color, background-color;
  transition-duration: 0.15s;
}

input[type="mat-timepicker"].MatTimepickerInput:hover {
  border-color: #999;
  background-color: #fafafa;
}

/* customize clock color */
.MatTimePicker-Clock .MatTimePicker-TimeHeader,
.MatTimePicker-Clock .MatTimePicker-Selector,
.MatTimePicker-Clock .MatTimePicker-WatchCenterDot
{
  background-color: rebeccapurple;
}

.MatTimePicker-Clock .MatTimePicker-Button {
  color: rebeccapurple;
}

/* MATERIAL TIMEPICKER STYLE */
.MatTimePicker-Clock {
  position: fixed;
  background-color: rgba(0, 0, 0, 0.3);
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  display: none;
  justify-content: center;
  align-items: center;
  font-family: sans-serif, Arial, Helvetica;
  text-align: center;
  z-index: 1;
  font-stretch: normal;
}

.MatTimePicker-Popup {
  width: calc(100% - 20px);
  max-width: 300px;
  background-color: #fff;
  display: flex;
  flex-direction: column;
  box-shadow: 8px 8px 20px 0px rgba(0, 0, 0, 0.4);
  border-radius: 1px;
}

.MatTimePicker-TimeHeader {
  background-color: #469cd1;
  padding: 15px;
  font-size: 33px;
  font-weight: 100;
  min-width: 110px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
}

.MatTimePicker-TimeHeader > span {
  opacity: 0.6;
  cursor: pointer;
}

span.MatTimePicker-TimeHeader-Selected {
  opacity: 1;
}

.MatTimePicker-WatchContainer {
  margin-top: 20px;
  margin-right: 20px;
  margin-bottom: 10px;
  margin-left: 20px;
  /* position: relative; */
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-between;
  flex-grow: 1;
}

.MatTimePicker-Watch {
  width: 100%;
  padding-bottom: 100%;
  background-color: #e6e6e6;
  margin: 0px;
  border-radius: 100%;
  position: relative;
}

.MatTimePicker-WatchHourContainer {
  top: calc(50% - 15px);
  left: 50%;
  position: absolute;
  width: calc(50% - 35px);
  /* height: 100%; */
  text-align: right;
  vertical-align: middle;
  transform-origin: left;
  display: flex;
  justify-content: space-between;
  cursor: pointer;
  align-items: center;
}

.MatTimePicker-WatchHourContainer:hover .MatTimePicker-WatchHourBg,
.MatTimePicker-WatchHourContainer:hover .MatTimePicker-WatchStick,
.MatTimePicker-WatchHourContainer:hover .MatTimePicker-WatchCenterDot {
  opacity: 0.5;
}

.MatTimePicker-WatchHourContainer.MatTimePicker-HourSelected .MatTimePicker-WatchHourBg,
.MatTimePicker-WatchHourContainer.MatTimePicker-HourSelected .MatTimePicker-WatchStick,
.MatTimePicker-WatchHourContainer.MatTimePicker-HourSelected .MatTimePicker-WatchCenterDot {
  opacity: 1;
}

.MatTimePicker-HourSelected .MatTimePicker-WatchHourValue {
  color: #fff;
}

.MatTimePicker-WatchHour {
  padding: 0px;
  border-width: 0px;
  position: relative;
  /* margin-left: calc(50% - 0px); */
  vertical-align: middle;
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.MatTimePicker-WatchHourBg {
  background-color: rebeccapurple;
  width: inherit;
  height: inherit;
  position: absolute;
  border-radius: 15px;
  opacity: 0;
}

.MatTimePicker-WatchHourValue {
  color: #333;
  font-size: 0.9rem;
}

.MatTimePicker-WatchHourPM {
  width: calc(50% - 3px);
}

.MatTimePicker-WatchHourPM .MatTimePicker-WatchHourValue {
  font-size: 1rem;
}

.MatTimePicker-WatchStick {
  height: 2px;
  flex-grow: 1;
  background-color: rebeccapurple;
  opacity: 0;
  margin-left: -3px;
}

.MatTimePicker-WatchCenterDot {
  width: 5px;
  height: 5px;
  border-radius: 5px;
  background-color: rebeccapurple;
  opacity: 0;
  margin-left: -2.5px;
}

.MatTimePicker-WatchMinuteContainer {
  top: calc(50% - 10px);
  left: 50%;
  position: absolute;
  width: calc(50% - 3px);
  text-align: right;
  vertical-align: middle;
  transform-origin: left;
  display: flex;
  justify-content: space-between;
  cursor: pointer;
  align-items: center;
  height: 15px;
  /* overflow: hidden; */
}

.MatTimePicker-WatchMinuteContainer:hover .MatTimePicker-WatchHourBg,
.MatTimePicker-WatchMinuteContainer:hover .MatTimePicker-WatchStick,
.MatTimePicker-WatchMinuteContainer:hover .MatTimePicker-WatchCenterDot {
  opacity: 0.5;
}

.MatTimePicker-WatchMinuteContainer.MatTimePicker-HourSelected .MatTimePicker-WatchHourBg,
.MatTimePicker-WatchMinuteContainer.MatTimePicker-HourSelected .MatTimePicker-WatchStick,
.MatTimePicker-WatchMinuteContainer.MatTimePicker-HourSelected .MatTimePicker-WatchCenterDot {
  opacity: 1;
}

.MatTimePicker-WatchMinute {
  padding: 0px;
  border-width: 0px;
  position: relative;
  vertical-align: middle;
  height: 30px;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
}

.MatTimePicker-Buttons {
  /* padding: 10px 15px; */
  display: flex;
  justify-content: flex-end;
  margin-top: 10px;
}

.MatTimePicker-Button {
  background-color: #fff;
  border: none;
  font-size: 16px;
  margin-left: 20px;
  padding: 10px;
  cursor: pointer;
  border-radius: 1px;
  user-select: none;
  outline: none;
}

.MatTimePicker-Clock .MatTimePicker-Button:active {
  background-color: rgba( 0, 0, 0, 0.7);
}

.MatTimePicker-Button:hover {
  background-color: rebeccapurple;
  color: #fff;
}

@media only screen and (min-width: 768px) {

  .MatTimePicker-WatchContainer {

  }

  .MatTimePicker-Popup {

  }
}

@media only screen and (orientation:landscape) {
  .MatTimePicker-Popup {
    flex-direction: row;
    max-width: 400px;
  }
}

